--- a/co/como-participar.html
+++ b/co/como-participar.html
@@ -74,35 +74,35 @@
 			<div class="bloque-1">
 				<div id="uno" class="col-md-10 offset-md-1 col-12 yellow-rounded-box text-left">
 					<div class="row">
-						<div class="col-1 numero">1.</div>
-						<div class="col-8 pr-0 justify-content-center align-self-center">
+						<div class="col-md-1 col-2 numero">1.</div>
+						<div class="col-md-8 col-7 pr-0 justify-content-center align-self-center">
 							<p class="font-19">Busca el código que está en el dorso de tus tazos coleccionables UEFA CHAMPIONS LEAGUE 2019.</p>	
 						</div>
 						<div class="col-3"><img class="img-fluid position-absolute" alt="" src="../img/como-participar/1-tazo.png"></div>
 					</div>
 				</div>
-				<div id="dos" class="col-md-9 offset-md-1 col-12 yellow-rounded-box text-left">
+				<div id="dos" class="col-md-10 offset-md-1 col-12 yellow-rounded-box text-left">
 					<div class="row">
-						<div class="col-1 numero">2.</div>
-						<div class="col-8 pr-0 justify-content-center align-self-center">
+						<div class="col-md-1 col-2 numero">2.</div>
+						<div class="col-md-8 col-7 pr-0 justify-content-center align-self-center">
 							<p class="font-19">Ingresa a tu álbum virtual. Puedes hacerlo desde <a href="#" class="red">aquí</a>.</p>	
 						</div>
 						<div class="col-3"><img class="img-fluid position-absolute" alt="" src="../img/como-participar/2-topps.png"></div>
 					</div>
 				</div>
-				<div id="tres" class="col-md-8 offset-md-1 col-12 yellow-rounded-box text-left">
+				<div id="tres" class="col-md-10 offset-md-1 col-12 yellow-rounded-box text-left">
 					<div class="row">
-						<div class="col-1 numero">3.</div>
-						<div class="col-9 pr-0 justify-content-center align-self-center">
+						<div class="col-md-1 col-2 numero">3.</div>
+						<div class="col-md-8 col-7 pr-0 justify-content-center align-self-center">
 							<p class="font-19">Registrate por primera vez con tu email o con tu perfil de Facebook.</p>	
 						</div>
-						<div class="col-2"><img class="img-fluid position-absolute" alt="" src="../img/como-participar/3-facebook.png"></div>
+						<div class="col-3"><img class="img-fluid position-absolute" alt="" src="../img/como-participar/3-facebook.png"></div>
 					</div>
 				</div>
 				<div id="cuatro" class="col-md-10 offset-md-1 col-12 yellow-rounded-box text-left">
 					<div class="row">
-						<div class="col-1 numero">4.</div>
-						<div class="col-8 pr-0 justify-content-center align-self-center">
+						<div class="col-md-1 col-2 numero">4.</div>
+						<div class="col-md-8 col-7 pr-0 justify-content-center align-self-center">
 							<p class="font-19">Cada vez que cargues un código, se te desbloquearán 10 sobres con 5 estampas virtuales de jugadores (total 50 jugadores).</p>	
 						</div>
 						<div class="col-3"><img class="img-fluid position-absolute" alt="" src="../img/como-participar/4-sobres.png"></div>
@@ -110,8 +110,8 @@
 				</div>
 				<div id="cinco" class="col-md-10 offset-md-1 col-12 yellow-rounded-box text-left">
 					<div class="row">
-						<div class="col-1 numero">5.</div>
-						<div class="col-11 justify-content-center align-self-center">
+						<div class="col-md-1 col-2 numero">5.</div>
+						<div class="col-md-11 col-10 justify-content-center align-self-center">
 							<p class="font-19">Ya verás que es muy simple! Todo lo hace el álbum automáticamente. Cada página se irá completando con tus estampas. Y cada vez que vuelvas a ingresar con tu email, tu álbum estará como lo completaste la última vez que accediste.</p>	
 						</div>
 					</div>
@@ -122,28 +122,28 @@
 		        <div id="bloquedos" class="collapse" data-parent="#accordion">
 					<div id="seis" class="col-md-10 offset-md-1 col-12 yellow-rounded-box text-left">
 						<div class="row">
-							<div class="col-1 numero">6.</div>
-							<div class="col-8 pr-0 justify-content-center align-self-center">
+							<div class="col-md-1 col-2 numero">6.</div>
+							<div class="col-md-8 col-7 pr-0 justify-content-center align-self-center">
 								<p class="font-19">Tienes estampas repetidas? No te preocupes!<br>
 								Tenemos la posibilidad de que hagas canje de estampas con otros consumidores. Así puedes completar tu álbum más rápido. Fíjate en la sección “Exchange” dentro de tu álbum.</p>	
 							</div>
 							<div class="col-3"><img class="img-fluid position-absolute" alt="" src="../img/como-participar/6-canje.png"></div>
 						</div>
 					</div>
-					<div id="siete" class="col-md-9 offset-md-1 col-12 yellow-rounded-box text-left">
+					<div id="siete" class="col-md-10 offset-md-1 col-12 yellow-rounded-box text-left">
 						<div class="row">
-							<div class="col-1 numero">7.</div>
-							<div class="col-8 pr-0 justify-content-center align-self-center">
+							<div class="col-md-1 col-2 numero">7.</div>
+							<div class="col-md-8 col-7 pr-0 justify-content-center align-self-center">
 								<p class="font-19">Recuerda que tienes hasta el 28 de Abril para completar tu álbum.<br>
 								Y un consejo: Cada viaje es para 2! Conviene hacer una cuenta conjunta con un amigo y coleccionar más rápido los tazos!</p>	
 							</div>
 							<div class="col-3"><img class="img-fluid position-absolute" alt="" src="../img/como-participar/7-consejo.png"></div>
 						</div>
 					</div>
-					<div id="ocho" class="col-md-8 offset-md-1 col-12 yellow-rounded-box text-left">
+					<div id="ocho" class="col-md-10 offset-md-1 col-12 yellow-rounded-box text-left">
 						<div class="row">
-							<div class="col-1 numero">8.</div>
-							<div class="col-8 pr-0 justify-content-center align-self-center">
+							<div class="col-md-1 col-2 numero">8.</div>
+							<div class="col-md-8 col-7 pr-0 justify-content-center align-self-center">
 								<p class="font-19">Si al final de la promoción has completado todo tu álbum, participarás de un sorteo por el viaje entre todos los que lo hayan logrado. Estate atento a tu email!!!</p>	
 							</div>
 							<div class="col-3"><img class="img-fluid position-absolute" alt="" src="../img/como-participar/8-viaje.png"></div>
@@ -151,8 +151,8 @@
 					</div>
 					<div id="nueve" class="col-md-10 offset-md-1 col-12 yellow-rounded-box text-left">
 						<div class="row">
-							<div class="col-1 numero">9.</div>
-							<div class="col-11 justify-content-center align-self-center">
+							<div class="col-md-1 col-2 numero">9.</div>
+							<div class="col-md-11 col-10 justify-content-center align-self-center">
 								<p class="font-19">Los ganadores serán comunicados en esta web a partir del 1 de Mayo de 2019. Suerte y a participar!!!</p>	
 							</div>
 						</div>
