--- a/co/registro.html
+++ b/co/registro.html
@@ -97,7 +97,7 @@
                             </select>
                         </div>
                         <div class="form-group col-6">
-                            <input class="form-control" type="date" id="fecha" name="fecha" placeholder="fecha de nacimiento" required>
+                            <input class="form-control" type="text" onfocus="(this.type='date')" onblur="(this.type='text')" id="fecha" name="fecha" placeholder="fecha de nacimiento" required>
                         </div>
                         <div class="form-group col-6">
                             <input class="form-control" type="text" id="idpersonal" name="idpersonal" placeholder="identificación personal" required>
