AJUSTE HOME CON LOGIN - COLOMBIA

--- a/co/home-con-login.html
+++ b/co/home-con-login.html
@@ -91,6 +91,10 @@
 				<div class="col-md-5 offset-md-1 col-12 yellow-rounded-box text-center pt-5 xs-pt-25">
 					<p class="red font-24 pt-3 xs-pt-0"><a href="#" class="red">Aún no estoy registrado</a></p>
 				</div>
+				<div class="col-md-11 offset-md-1 col-12 red-rounded-box text-center pt-3 pb-3 pl-5 pr-5">
+					<p class="text-uppercase white mb-3">Ya tenemos los 2 ganadores de los 2 viajes a ver la final de la uefa champions league. Gracias a todos por su participación y los invitamos a que sigan divirtiéndose con los tazos coleccionables y el álbum virtual.</p>
+					<p class="white">Nota: El Organizador certifica que la existencia de premios se agotó el 01/03/2019.</p>
+				</div>
 			</div>
 		</div>
     </div>
