PERU - Paginas restantes

--- a/pe/ganaste-2.html
+++ b/pe/ganaste-2.html
@@ -73,7 +73,7 @@
 		<div class="col-12 content">
 			<div class="col-md-10 offset-md-1 col-12 yellow-rounded-box text-center">
 				<h2 class="mb-0">Felicitaciones!!!</h2>
-				<p class="red font-24 mb-3">Eres el posible ganador de <strong class="red font-24 text-underline">unos audífonos</strong>.</p>
+				<p class="red font-24 mb-3">Eres el posible ganador de <strong class="red font-24 text-underline">un parlante</strong>.</p>
 				<p class="font-15 red mb-3">Para poder asignarte el premio debes seguir un paso más. Dentro de las próximas 72 hs hábiles nos pondremos en contacto vía email.</p>
 				<p class="font-15 black mb-3">Es muy importante que conserves la tirilla con el código que acabas de cargar.</p>
 				<p class="font-15 red mb-0 font-weight-bold">Asegurate que tu email este bien en tu formulario: <span class="black font-10">en caso de que no sea así, por favor edita tus datos <a href="#" class="text-underline">aquí</a>.</span></p>
