AR - BYC con Solapas

--- a/ar/bases-y-condiciones.html
+++ b/ar/bases-y-condiciones.html
@@ -71,11 +71,31 @@
 
 		<div class="col-12 content">
 			<h2>bases y condiciones</h2>
-
-			<div class="col-md-10 offset-md-1 col-12 yellow-rounded-box text-left byc">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elementum lectus ut justo bibendum, ut cursus leo molestie. Praesent massa sem, volutpat et diam non, ornare finibus lectus. Cras congue ipsum urna, non suscipit nisi tempus vel. Curabitur id tellus luctus mi ultricies sodales. Pellentesque accumsan hendrerit erat ac porta. Integer et erat risus. Mauris sodales dapibus enim ut ultricies.</p>
-				<p>Duis ultricies est in ipsum convallis euismod. Sed blandit ex sit amet nulla rhoncus posuere. Fusce tempor felis hendrerit, volutpat turpis ac, euismod neque. Donec maximus risus porta, convallis odio at, scelerisque magna. Fusce gravida eros mauris. Nulla ac lacus et nisi facilisis porttitor et at erat. Aenean aliquet at eros et semper. Praesent posuere ex sit amet dui pellentesque, eget dapibus diam vehicula. Maecenas posuere lacus id feugiat cursus. Nullam a dapibus nisl. Nulla sed cursus turpis, malesuada blandit mauris. Sed at urna justo. Nam tincidunt dolor at accumsan porta. Vestibulum vulputate finibus est at luctus.</p>
-				<p>In tincidunt interdum erat, vitae feugiat quam volutpat sit amet. Donec in orci eu massa semper sodales eu id risus. Mauris sit amet diam ac metus congue tempus nec vel massa. Sed dapibus bibendum enim, nec dignissim dolor laoreet quis. Proin viverra pulvinar nulla a blandit. Vestibulum convallis, mauris nec tincidunt maximus, nulla tortor condimentum lectus, in accumsan nunc tellus quis turpis. Ut vulputate massa velit. Nunc pellentesque augue ac feugiat pretium. Etiam mollis at nunc a laoreet. Cras vestibulum lacinia imperdiet.</p>	
+			<ul role="tablist" class="nav tabs-menu col-md-10 offset-md-1 col-12">
+			  <li class="nav-item">
+			    <a class="nav-link active" href="#tab-1" role="tab" data-toggle="tab">Tab 1</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" href="#tab-2" role="tab" data-toggle="tab">Tab 2</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" href="#tab-3" role="tab" data-toggle="tab">Tab 3</a>
+			  </li>
+			</ul>
+			<div class="tab-content" id="myTabContent">
+				<div id="tab-1" role="tabpanel" class="tab-pane fade show active col-md-10 offset-md-1 col-12 yellow-rounded-box text-left byc">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elementum lectus ut justo bibendum, ut cursus leo molestie. Praesent massa sem, volutpat et diam non, ornare finibus lectus. Cras congue ipsum urna, non suscipit nisi tempus vel. Curabitur id tellus luctus mi ultricies sodales. Pellentesque accumsan hendrerit erat ac porta. Integer et erat risus. Mauris sodales dapibus enim ut ultricies.</p>
+					<p>Duis ultricies est in ipsum convallis euismod. Sed blandit ex sit amet nulla rhoncus posuere. Fusce tempor felis hendrerit, volutpat turpis ac, euismod neque. Donec maximus risus porta, convallis odio at, scelerisque magna. Fusce gravida eros mauris. Nulla ac lacus et nisi facilisis porttitor et at erat. Aenean aliquet at eros et semper. Praesent posuere ex sit amet dui pellentesque, eget dapibus diam vehicula. Maecenas posuere lacus id feugiat cursus. Nullam a dapibus nisl. Nulla sed cursus turpis, malesuada blandit mauris. Sed at urna justo. Nam tincidunt dolor at accumsan porta. Vestibulum vulputate finibus est at luctus.</p>
+					<p>In tincidunt interdum erat, vitae feugiat quam volutpat sit amet. Donec in orci eu massa semper sodales eu id risus. Mauris sit amet diam ac metus congue tempus nec vel massa. Sed dapibus bibendum enim, nec dignissim dolor laoreet quis. Proin viverra pulvinar nulla a blandit. Vestibulum convallis, mauris nec tincidunt maximus, nulla tortor condimentum lectus, in accumsan nunc tellus quis turpis. Ut vulputate massa velit. Nunc pellentesque augue ac feugiat pretium. Etiam mollis at nunc a laoreet. Cras vestibulum lacinia imperdiet.</p>	
+				</div>
+				<div id="tab-2" role="tabpanel" class="tab-pane fade col-md-10 offset-md-1 col-12 yellow-rounded-box text-left byc">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elementum lectus ut justo bibendum, ut cursus leo molestie. Praesent massa sem, volutpat et diam non, ornare finibus lectus. Cras congue ipsum urna, non suscipit nisi tempus vel. Curabitur id tellus luctus mi ultricies sodales. Pellentesque accumsan hendrerit erat ac porta. Integer et erat risus. Mauris sodales dapibus enim ut ultricies.</p>
+					<p>Duis ultricies est in ipsum convallis euismod. Sed blandit ex sit amet nulla rhoncus posuere. Fusce tempor felis hendrerit, volutpat turpis ac, euismod neque. Donec maximus risus porta, convallis odio at, scelerisque magna. Fusce gravida eros mauris. Nulla ac lacus et nisi facilisis porttitor et at erat. Aenean aliquet at eros et semper. Praesent posuere ex sit amet dui pellentesque, eget dapibus diam vehicula. Maecenas posuere lacus id feugiat cursus. Nullam a dapibus nisl. Nulla sed cursus turpis, malesuada blandit mauris. Sed at urna justo. Nam tincidunt dolor at accumsan porta. Vestibulum vulputate finibus est at luctus.</p>	
+				</div>
+				<div id="tab-3" role="tabpanel" class="tab-pane fade col-md-10 offset-md-1 col-12 yellow-rounded-box text-left byc">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec elementum lectus ut justo bibendum, ut cursus leo molestie. Praesent massa sem, volutpat et diam non, ornare finibus lectus. Cras congue ipsum urna, non suscipit nisi tempus vel. Curabitur id tellus luctus mi ultricies sodales. Pellentesque accumsan hendrerit erat ac porta. Integer et erat risus. Mauris sodales dapibus enim ut ultricies.</p>
+					<p>In tincidunt interdum erat, vitae feugiat quam volutpat sit amet. Donec in orci eu massa semper sodales eu id risus. Mauris sit amet diam ac metus congue tempus nec vel massa. Sed dapibus bibendum enim, nec dignissim dolor laoreet quis. Proin viverra pulvinar nulla a blandit. Vestibulum convallis, mauris nec tincidunt maximus, nulla tortor condimentum lectus, in accumsan nunc tellus quis turpis. Ut vulputate massa velit. Nunc pellentesque augue ac feugiat pretium. Etiam mollis at nunc a laoreet. Cras vestibulum lacinia imperdiet.</p>
+				</div>
 			</div>
 		</div>
     </div>
